--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "bulma": "^0.7.4",
     "debounce": "^1.2.0",
     "jquery": "^3.2.1",
+    "kind-of": "^6.0.3",
     "lazysizes": "^4.1.8",
     "lodash-es": "^4.17.4",
     "normalize.css": "^7.0.0",
